--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/soft-ui-dashboard-react/issues"
   },
+  "proxy": "https://swapit.codemelodies.com", 
   "repository": {
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/soft-ui-dashboard-react.git"
@@ -50,10 +51,9 @@
     "web-vitals": "3.3.1"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3005 && react-scripts start",
+    "build": "",
+    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -74,14 +74,16 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^9.5.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "http-proxy-middleware": "^3.0.0",
-    "prettier": "2.8.8"
+    "prettier": "^2.8.8",
+    "react-app-rewired": "^2.2.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
