--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/soft-ui-dashboard-react/issues"
   },
-  "proxy": "https://swapit.codemelodies.com", 
+  "options": {
+    "allowedHosts": ["https://swapit.codemelodies.com"],
+    "proxy": "https://swapit.codemelodies.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/soft-ui-dashboard-react.git"
@@ -51,8 +54,8 @@
     "web-vitals": "3.3.1"
   },
   "scripts": {
-    "start": "set PORT=3005 && react-scripts start",
-    "build": "",
+    "start": "cross-env PORT=3005 && react-scripts start",
+    "build": "cross-env PORT=3005 && react-scripts build",
     "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test"
   },
   "eslintConfig": {
